fix footer style on mobile

--- a/mcww_web/style.css
+++ b/mcww_web/style.css
@@ -6,9 +6,13 @@
     display: none !important;
 }
 
+footer {
+    flex-wrap: wrap;
+}
 footer .divider {
     margin-left: var(--size-2) !important;
     margin-right: var(--size-2) !important;
+    display: block !important;
 }
 
 /* resize handle */
